Fixed Projects styling on small phones

--- a/src/App.scss
+++ b/src/App.scss
@@ -987,17 +987,19 @@ svg {
   }
 
 
+  #projects {
+    height: 110vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+
   .project-box {
-    height: 50%;
-    width: 30%;
+    height: 50vh;
+    width: 50vh;
   }
 
   .project-box .project-bar span, .project-box .project-bar i {
     font-size: 1.25vh;
-  }
-
-  .project-bar span, .project-bar i {
-    font-size: 1.5vh;
   }
 
   .project-img {
@@ -1011,8 +1013,21 @@ svg {
     width: 100%;
   }
 
+  .project-img .project-languages {
+    height: 20%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .project-img .project-languages i {
+    font-size: 5vh;
+  }
+
   .project-languages i {
-    font-size: 2vh;
+    font-size: 3vh;
   }
 
   .modal {
